src/objects/Evaluation_Response__c.object
<CustomObject>
    <fields>
        <fullName>Administered_By__c</fullName>
        <label>Administered By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_at_Administration__c</fullName>
        <formula>FLOOR((Date__c -Person_Being_Served__r.Birthdate+1)/365.2425)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age at Administration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Albumin__c</fullName>
        <label>Albumin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allergy_Details__c</fullName>
        <label>Allergy Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allergy_Type__c</fullName>
        <label>Allergy Type</label>
        <picklist>
            <picklistValues>
                <fullName>Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Annotation_Height__c</fullName>
        <label>Annotation Height</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annotation_Shape__c</fullName>
        <label>Annotation Shape</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annotation_Source__c</fullName>
        <label>Annotation Source</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Annotation_Text__c</fullName>
        <label>Annotation Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Annotation_Width__c</fullName>
        <label>Annotation Width</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annotation_X__c</fullName>
        <label>Annotation X</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annotation_Y__c</fullName>
        <label>Annotation Y</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assistive_Device_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assistive_Device_Removable__c</fullName>
        <label>PBS can easily remove the device?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assistive_Device_Restricts_Movement__c</fullName>
        <label>Device restricts PBS&apos;s movement?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assistive_Device_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assistive_Device_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bed Alarm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bed Cradle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bed Rails</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dentures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elastic Hose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enclosure Bed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Front-Wheeled Walker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glasses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hand Rails</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hearing Aid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hoyer Lift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infant Crib</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lap Tray</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Bed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Wheel Walker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orthotics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overhead Trapeze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prosthetic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seat Belt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shower Chair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Side Rail Full</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Side Rail Half</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stroller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trunk Supports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wheelchair</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Associated_Pain__c</fullName>
        <label>Associated Pain</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Association_Made_By__c</fullName>
        <label>Association Made By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BE__c</fullName>
        <label>BE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BUN_Creat__c</fullName>
        <label>Bun/Creat</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BUN__c</fullName>
        <label>Bun</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blood_Pressure__c</fullName>
        <label>Blood Pressure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CL__c</fullName>
        <label>CL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Management_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Management Plan</label>
        <referenceTo>Case_Management_Plan__c</referenceTo>
        <relationshipLabel>Evaluation Responses</relationshipLabel>
        <relationshipName>Evaluation_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>X-Ray</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MRI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doppler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Chest_X_Ray_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chest X-Ray Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chest_X_Ray_Result__c</fullName>
        <label>Chest X-Ray Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contacts_Present__c</fullName>
        <label>Does PBS have contacts at facility?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contacts_Type__c</fullName>
        <label>Contacts Type</label>
        <picklist>
            <picklistValues>
                <fullName>Soft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contracture__c</fullName>
        <label>Contracture</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creat__c</fullName>
        <label>Creat</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Unknown__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Date Unknown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_is_Approximate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Date is Approximate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_Association__c</fullName>
        <label>Date of Association</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_Incident__c</fullName>
        <label>Date of Incident</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Decubity_Measurement__c</fullName>
        <label>Measurement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decubity_Stage__c</fullName>
        <label>Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Denture_Type__c</fullName>
        <label>Denture Type</label>
        <picklist>
            <picklistValues>
                <fullName>Upper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Depth__c</fullName>
        <description>Used in Pressure Ulcer fieldset</description>
        <label>Depth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disregard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disregard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dosage_Number__c</fullName>
        <label>Dosage Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dosage__c</fullName>
        <label>Dosage (mL)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <label>End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EvalValueSectionIdentifier__c</fullName>
        <label>EvalValueSectionIdentifier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evaluation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Evaluation</label>
        <referenceTo>Evaluation__c</referenceTo>
        <relationshipLabel>Evaluation Responses</relationshipLabel>
        <relationshipName>Evaluation_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exudate_Type_Odor_Amount__c</fullName>
        <label>Exudate Type/Odor/Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Level__c</fullName>
        <label>Final Level</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Follow_up_Effectiveness__c</fullName>
        <label>Follow-up Effectiveness</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Follow_up_Pain_Level__c</fullName>
        <label>Follow-up Pain Level</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formula__c</fullName>
        <label>Formula</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fracture_Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Glasses_Contacts_Purpose__c</fullName>
        <label>Purpose</label>
        <picklist>
            <picklistValues>
                <fullName>For Reading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>For Distance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multifocal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Glasses_Present__c</fullName>
        <label>Does PBS have glasses at facility?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gluc__c</fullName>
        <label>Gluc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HCO3__c</fullName>
        <label>HCO3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HCT__c</fullName>
        <label>HCT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HGB_HCT__c</fullName>
        <label>HGB/HCT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HGB__c</fullName>
        <label>HGB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_Intervention_Needed__c</fullName>
        <label>HR Intervention Needed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HR_Narrative_Note__c</fullName>
        <label>HR Narrative Note</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Has_Contacts__c</fullName>
        <label>Contacts</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_Glasses__c</fullName>
        <label>Glasses</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hearing_Aid_Present__c</fullName>
        <label>Does PBS have a hearing aid at facility?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hearing_Aid_Type__c</fullName>
        <label>Hearing Aid Type</label>
        <picklist>
            <picklistValues>
                <fullName>Left</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Right</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Heart_Rate__c</fullName>
        <label>Heart Rate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISP_Contributor_Name__c</fullName>
        <description>Contributors and Signature Data OR ISP</description>
        <label>Contributor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISP_Contributor_Origin_Id__c</fullName>
        <description>This field contains the Id of the ServiceAssignment Personal Agent JO id or Related Party Id and is useful for Refresh Contributor function</description>
        <label>ISP Contributor Origin Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISP_Contributor_Risk_Identification_Tool__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in Contributors and Signatures OR ISP</description>
        <label>Contributor to Risk Identification Tool?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISP_Describe_Chosen_Services_Supports__c</fullName>
        <label>Describe Chosen Services/Supports</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ISP_Describe_service_setting__c</fullName>
        <label>Describe service setting, SVC Code</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ISP_End__c</fullName>
        <label>End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ISP_Evaluation_Date__c</fullName>
        <label>Evaluation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ISP_Has_condition_changed_evaluation__c</fullName>
        <label>Has condition changed since evaluation?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISP_Identified_needs__c</fullName>
        <label>List identified needs that this service</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ISP_Is_there_a_paid_Service__c</fullName>
        <label>Is there a paid Service</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ISP_Key_Steps_to_work_toward_outcome__c</fullName>
        <label>Key steps toward the outcome</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ISP_List_Needs_Identified__c</fullName>
        <label>List Needs Assessment this ser Address</label>
        <picklist>
            <picklistValues>
                <fullName>Ambulation/Mobility in Home/Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bathing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beh Supports - No Plan – SUPV/MON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beh Supports - Plans – Home/Communty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beh Supports - SUPV - Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beh Supports - SUPV - Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beh Supports - SUPV - Home - Excl Focus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bladder and Bowel Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication - Expressive/Receptive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Integration Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complex Health Management Supports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dressing and Hair Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eating/Drinking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fire Evacuation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Management Supports - General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hygiene (includes Oral Hygiene, Shaving)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laundry and Housekeeping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meal Preparation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Med Mgmt Supports – INH/TOP/SUPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Med Mgmt Supports - Injections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Med Mgmt Supports - Oral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nighttime Needs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shopping and Money Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Interaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telephone/Alt Communication Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toileting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferring/Positioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ISP_Note_if_Written_Implementation__c</fullName>
        <description>OR ISP</description>
        <label>Note if Written Implementation</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ISP_Paid_Services__c</fullName>
        <description>OR ISP</description>
        <label>Paid Services</label>
        <picklist>
            <picklistValues>
                <fullName>Employment Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistive Device</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistive Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attendant Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Behavior Consult/Supports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chore Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Med. Comm. Transport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental Modification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relief Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skill Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transition Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural Supports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Resources</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ISP_Per_Frequency__c</fullName>
        <label>Per (Frequency)</label>
        <picklist>
            <picklistValues>
                <fullName>Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan year</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ISP_Person_Preference_Service_Delivery__c</fullName>
        <label>Person’s service delivery preference</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ISP_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ISP Plan</label>
        <referenceTo>Evaluation_Response__c</referenceTo>
        <relationshipLabel>Evaluation Responses</relationshipLabel>
        <relationshipName>Associated_Provider_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ISP_Present_at_Meeting__c</fullName>
        <description>Contributors and Signatures Data OR ISP</description>
        <label>Present at ISP Meeting?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ISP_Risk__c</fullName>
        <label>ISP Risk</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ISP_Risks__c</fullName>
        <label>Risk(s)</label>
        <picklist>
            <picklistValues>
                <fullName>Aspiration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Choking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Constipation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dehydration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extreme Food or Liquid-Seeking Behavior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suicide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ISP_Same_as_plan_year__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same as plan year</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>